--- a/Tenis/src/index.html
+++ b/Tenis/src/index.html
@@ -12,7 +12,7 @@
 
     <link href="../styles/output.css" rel="stylesheet" />
 
-    <title>Lançamento Tenis Nike Air</title>
+    <title>Tenis Nike Air</title>
   </head>
   <body class="w-full h-full overflow-hidden">
     <div
