--- a/Tenis/src/index.html
+++ b/Tenis/src/index.html
@@ -11,6 +11,7 @@
     />
 
     <link href="../styles/output.css" rel="stylesheet" />
+    <link href="../styles/bg.css" rel="stylesheet" />
 
     <title>Tenis Nike Air</title>
   </head>
