--- a/DevHouse/src/index.html
+++ b/DevHouse/src/index.html
@@ -145,7 +145,7 @@
             <h1 class="text-3xl font-extrabold text-white pt-3">
               Compre ou alugue
             </h1>
-            <span class="hidden md:block text-gray-500"
+            <span class="hidden md:block text-white"
               >100 casas encontradas</span
             >
           </div>
